--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <main id="content" class="main-content" role="main">
       <h2 id="chain-reaction---online-multiplayer-game">Chain reaction - Online Multiplayer Game</h2>
 
-    <h3 id="privacy-policy">Privacy Policy</h3>
+    <h3 id="privacy-policy">Privacy Policy Latest</h3>
 
     <p>Bharath Bandaru built the chain reaction app as a Free app. This SERVICE is provided by Bharath Bandaru at no cost and is intended for use as is.</p>
 
