--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <h3 id="privacy-policy">Privacy Policy Latest</h3>
 
-    <p>Bharath Bandaru built the chain reaction app as a Free app. This SERVICE is provided by Bharath Bandaru at no cost and is intended for use as is.</p>
+    <p>Bharath Bandaru built the chain reaction app as a Free app. This SERVICE is provided by Bharath Bandaru at no cost and is intended for use as it is.</p>
 
     <p>This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.</p>
 
