--- a/index.html
+++ b/index.html
@@ -39,10 +39,13 @@
   <div>
       <main id="content" class="main-content" role="main">
       <h2 id="chain-reaction---online-multiplayer-game">Chain reaction - Online Multiplayer Game</h2>
+      <a href="https://bharath-bandaru.github.io/chain-reaction-game/">
+        <h2 id="chain-reaction---online-multiplayer-game">Play Here</h2>
+      </a>
+      
+    <h3 id="privacy-policy">Privacy Policy</h3>
 
-    <h3 id="privacy-policy">Privacy Policy Latest</h3>
-
-    <p>Bharath Bandaru built the chain reaction app as a Free app. This SERVICE is provided by Bharath Bandaru at no cost and is intended for use as it is.</p>
+    <p>Bharath Bandaru built the chain reaction app as a Free app. This SERVICE is provided by Bharath Bandaru at no cost and is intended for use as is.</p>
 
     <p>This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.</p>
 
