Update privacy policy button text and visibility style

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
       Bharath Bandaru
     </a>
   </div>
-  <button class="toggle-button" onclick="togglePrivacyPolicy()">Hide Privacy Policy</button>
-  <div id="privacy-policy-section" style="display: flex; align-items: center; justify-content: center; margin-top: 20px; background: #191919; color: #a7a7a7;">
+  <button class="toggle-button" onclick="togglePrivacyPolicy()">Show Privacy Policy</button>
+  <div id="privacy-policy-section" style="display: flex; align-items: center; justify-content: center; margin-top: 20px; background: #191919; color: #a7a7a7; visibility: hidden;">
     <main id="content" class="main-content" role="main" style="text-align: left; width: 70%; ">
       <h2 id="chain-reaction---online-multiplayer-game" style="text-align: center;">Chain reaction - Online Multiplayer Game</h2>
     
