--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<head>
   <meta charset="UTF-8">
+  <link rel="icon" href="logo.png" type="image/png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chain Reaction Game</title>
   <style>
@@ -11,6 +13,31 @@
       text-align: center;
       font-family: Arial, sans-serif;
     }
+    .profile-img {
+          width: 200px;
+          height: 200px;
+          border-radius: 50%;
+          object-fit: cover;
+      }
+      .text-content {
+          margin-top: 20px;
+      }
+      .strikethrough {
+          text-decoration: line-through;
+      }
+      .social-icons {
+          position: absolute;
+          top: 20px;
+          right: 20px;
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
+      }
+      .social-icons a {
+          color: white;
+          text-decoration: none;
+          font-size: 20px;
+      }
     .container {
       max-width: 800px;
       margin: 0 auto;
@@ -61,7 +88,29 @@
 </head>
 <body>
   <div class="container">
-    <h1>Here is a game I created!</h1>
+    <div class="container">
+        <div style="display: flex; align-items: center; justify-content: center;">
+          <img style="margin-left: 36px;" src="profile.jpg" alt="Profile Image" class="profile-img">
+          <div style="display: flex; flex-direction: column; margin-left: 20px; gap:9px">
+            <a href="https://in.pinterest.com/bandarubharath/" target="_blank" rel="noopener noreferrer"><img src="pinterest.svg" alt="Pinterest" width="16" height="16"></a>
+            <a href="https://www.linkedin.com/in/bharathbandaru/" target="_blank" rel="noopener noreferrer"><img src="linkedin.svg" alt="LinkedIn" width="16" height="16"></a>
+            <a href="https://github.com/bharath-bandaru" target="_blank" rel="noopener noreferrer"><img src="github.svg" alt="GitHub" width="16" height="16"></a>
+            <a href="https://twitter.com/thisismebharath" target="_blank" rel="noopener noreferrer"><img src="twitter.svg" alt="Twitter" width="16" height="16"></a>
+            <a href="https://www.instagram.com/bharath_bandaru_/" target="_blank" rel="noopener noreferrer"><img src="instagram.svg" alt="Instagram" width="18" height="18"></a>
+            
+          </div>
+        </div>
+        <p>Bharath Bandaru</p>
+        <div class="text-content">
+            <h2>👋 <strong>Hi there.</strong></h2>
+            <p>If you are viewing this on Desktop 🖥️.</p>
+            <p> Check my Portfolio that I designed 👉 <a href="https://portfolio-4a2e3.web.app/" target="_blank" rel="noopener noreferrer" style="color: green; text-decoration: underline;">here</a> 👈</p>
+            <p style="font-size: 18px;">Glad to meet you! 🍻</p>
+        </div>
+    </div>
+    <!-- <hr style="border: none; border-top: 2px solid green; text-align: center; margin: 20px 0;"> -->
+    <span style="position: relative; top: -12px; background-color: black; padding: 0 10px; color: green;">--------------------------------xoxoxoxooxoxoxxox------xoxoxoxooxoxoxxox--------------------------------</span>
+    <h2>Here is a game I created!</h2>
     <p style="font-size: 21px;">Play chain reaction <a href="https://bharath-bandaru.github.io/chain-reaction-game/" style="color: green; text-decoration: underline;">here</a>. ✨</p>
     <div class="image-container">
       <img src="avatar.png" alt="Avatar" class="avatar">
