Enhance index.html with improved title, meta description, and keywords for better SEO

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<head>
   <meta charset="UTF-8">
   <link rel="icon" href="logo.png" type="image/png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chain Reaction Game</title>
+  <title>Chain Reaction Game - Play Online Multiplayer Game</title>
+  <meta name="description" content="Play Chain Reaction, an exciting online multiplayer game. Challenge your friends and enjoy the strategic gameplay. Available on Google Play.">
+  <meta name="keywords" content="Chain Reaction, Online Multiplayer Game, Strategic Game, Bharath Bandaru, Google Play Games, Chain reaction Game, chainreaction, chainreactiongame, bestchainreaction game, best chain reaction game, best design award goes to this chian reaction">
+  <meta name="author" content="Bharath Bandaru">
   <style>
     body {
       background-color: black;
@@ -14,30 +16,30 @@
       font-family: Arial, sans-serif;
     }
     .profile-img {
-          width: 200px;
-          height: 200px;
-          border-radius: 50%;
-          object-fit: cover;
-      }
-      .text-content {
-          margin-top: 20px;
-      }
-      .strikethrough {
-          text-decoration: line-through;
-      }
-      .social-icons {
-          position: absolute;
-          top: 20px;
-          right: 20px;
-          display: flex;
-          flex-direction: column;
-          gap: 10px;
-      }
-      .social-icons a {
-          color: white;
-          text-decoration: none;
-          font-size: 20px;
-      }
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+    .text-content {
+      margin-top: 20px;
+    }
+    .strikethrough {
+      text-decoration: line-through;
+    }
+    .social-icons {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+    .social-icons a {
+      color: white;
+      text-decoration: none;
+      font-size: 20px;
+    }
     .container {
       max-width: 800px;
       margin: 0 auto;
