Fix punctuation in desktop view message in index.html

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <p>Bharath Bandaru</p>
         <div class="text-content">
             <h2>👋 <strong>Hi there.</strong></h2>
-            <p>If you are viewing this on Desktop 🖥️.</p>
+            <p>If you are viewing this on Desktop 🖥️,</p>
             <p> Check my Portfolio that I designed 👉 <a href="https://portfolio-4a2e3.web.app/" target="_blank" rel="noopener noreferrer" style="color: green; text-decoration: underline;">here</a> 👈</p>
             <p style="font-size: 18px;">Glad to meet you! 🍻</p>
         </div>
