Wrap images in links for improved navigation in index.html

--- a/index.html
+++ b/index.html
@@ -115,9 +115,13 @@
     <h2>Here is a game I created!</h2>
     <p style="font-size: 21px;">Play chain reaction <a href="https://bharath-bandaru.github.io/chain-reaction-game/" style="color: green; text-decoration: underline;">here</a>. ✨</p>
     <div class="image-container">
-      <img src="avatar.png" alt="Avatar" class="avatar">
+      <a href="https://portfolio-4a2e3.web.app/" target="_blank" rel="noopener noreferrer">
+        <img src="avatar.png" alt="Avatar" class="avatar">
+      </a>
       <a href="https://play.google.com/store/apps/details?id=com.bhvp.chainreaction"><img src="gplay.png" alt="Get it on Google Play" class="gplay"></a>
-      <img style="width: 100%; height: auto;" src="banner.png" alt="Chain Reaction Game" class="game-screenshot">
+      <a href="https://bharath-bandaru.github.io/chain-reaction-game/" target="_blank" rel="noopener noreferrer">
+        <img style="width: 100%; height: auto;" src="banner.png" alt="Chain Reaction Game" class="game-screenshot">
+      </a>
     </div>
     <div class="footer"></div>
       <a href="https://play.google.com/store/apps/details?id=com.bhvp.chainreaction" style="color: gray; text-decoration: underline;">Get it on Google Play</a>
