Adjust game item layout in index.html for improved alignment

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
     <span style="position: relative; top: -12px; background-color: black; padding: 0 10px; color: green;">--------------------------------xoxoxoxooxoxoxxox------xoxoxoxooxoxoxxox--------------------------------</span>
     <h2>Here are the games I created!</h2>
 
-    <div class="game-item" style="display: flex; align-items: flex-start; margin-top: 20px;">
-      <p class="bold-text" style="margin: 96px 40px 0 0;">1.</p>
+    <div class="game-item" style="display: flex; align-items: flex-start;">
+      <p class="bold-text" style="margin: 96px 40px 0 -123px;">1.</p>
       <div class="game-content" style="border: 1px dotted; padding: 20px;">
         <p style="font-size: 21px;">Escape Puzzle Game <a href="https://play.google.com/store/apps/details?id=com.bhvp.escapeGame" style="color: green; text-decoration: underline;">here</a>. ✨</p>
         <div class="image-container">
@@ -146,8 +146,8 @@
       </div>
     </div>
 
-    <div class="game-item" style="display: flex; align-items: flex-start;">
-      <p class="bold-text" style="margin: 96px 40px 0 0;">2.</p>
+    <div class="game-item" style="display: flex; align-items: flex-start;  margin-top: 20px;">
+      <p class="bold-text" style="margin: 96px 40px 0 -123px;">2.</p>
       <div class="game-content" style="border: 1px dotted; padding: 20px;">
         <p style="font-size: 21px;">Play chain reaction <a href="https://bharath-bandaru.github.io/chain-reaction-game/" style="color: green; text-decoration: underline;">here</a>. ✨</p>
         <div class="image-container">
