Update Escape Puzzle Game links in index.html to point to the correct URL

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <div class="game-item" style="display: flex; align-items: flex-start;">
       <p class="bold-text" style="margin: 96px 40px 0 -123px;">1.</p>
       <div class="game-content" style="border: 1px dotted; padding: 20px;">
-        <p style="font-size: 21px;">Escape Puzzle Game <a href="https://play.google.com/store/apps/details?id=com.bhvp.escapeGame" style="color: green; text-decoration: underline;">here</a>. ✨</p>
+        <p style="font-size: 21px;">Escape Puzzle Game <a href="https://bharath-bandaru.github.io/escape-web/" style="color: green; text-decoration: underline;">here</a>. ✨</p>
         <div class="image-container">
           <a href="https://portfolio-4a2e3.web.app/" target="_blank" rel="noopener noreferrer">
             <img src="avatar.png" alt="Avatar" class="avatar">
@@ -135,7 +135,7 @@
           <a href="https://play.google.com/store/apps/details?id=com.bhvp.escapeGame">
             <img src="gplay.png" alt="Get it on Google Play" class="gplay">
           </a>
-          <a href="https://bharath-bandaru.github.io/chain-reaction-game/" target="_blank" rel="noopener noreferrer">
+          <a href="https://bharath-bandaru.github.io/escape-web/" target="_blank" rel="noopener noreferrer">
             <img style="width: 100%; height: auto;" src="escape.png" alt="Chain Reaction Game" class="game-screenshot">
           </a>
         </div>
