Add target="_blank" to game links in index.html for improved user experience

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <div class="game-item" style="display: flex; align-items: flex-start;">
       <p class="bold-text" style="margin: 96px 40px 0 -123px;">1.</p>
       <div class="game-content" style="border: 1px dotted; padding: 20px;">
-        <p style="font-size: 21px;">Escape Puzzle Game <a href="https://bharath-bandaru.github.io/escape-web/" style="color: green; text-decoration: underline;">here</a>. ✨</p>
+        <p style="font-size: 21px;">Escape Puzzle Game <a href="https://bharath-bandaru.github.io/escape-web/" target="_blank" style="color: green; text-decoration: underline;">here</a>. ✨</p>
         <div class="image-container">
           <a href="https://portfolio-4a2e3.web.app/" target="_blank" rel="noopener noreferrer">
             <img src="avatar.png" alt="Avatar" class="avatar">
@@ -149,7 +149,7 @@
     <div class="game-item" style="display: flex; align-items: flex-start;  margin-top: 20px;">
       <p class="bold-text" style="margin: 96px 40px 0 -123px;">2.</p>
       <div class="game-content" style="border: 1px dotted; padding: 20px;">
-        <p style="font-size: 21px;">Play chain reaction <a href="https://bharath-bandaru.github.io/chain-reaction-game/" style="color: green; text-decoration: underline;">here</a>. ✨</p>
+        <p style="font-size: 21px;">Play chain reaction <a href="https://bharath-bandaru.github.io/chain-reaction-game/" target="_blank" style="color: green; text-decoration: underline;">here</a>. ✨</p>
         <div class="image-container">
           <a href="https://portfolio-4a2e3.web.app/" target="_blank" rel="noopener noreferrer">
             <img src="avatar.png" alt="Avatar" class="avatar">
