--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
       <p>Bharath Bandaru</p>
       <div class="text-content">
         <h2>👋 <strong>Hi there.</strong></h2>
-        <p>If you are viewing this on Desktop 🖥️, check my Portfolio that I designed 👉 <a
+        <p>Viewing on desktop? Check out my portfolio — built for big screens 👉 <a
             href="https://portfolio-4a2e3.web.app/" target="_blank" rel="noopener noreferrer"
             style="color: green; text-decoration: underline; font-size: 24px;">🔮</a> 👈</p>
         <p style="font-size: 18px; margin-bottom:0;">Glad to meet you! <span style="font-size: 24px;">🍻</span></p>
