--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <link rel="icon" href="logo.png" type="image/png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chain Reaction Game - Play Online Multiplayer Game</title>
+  <title>Bharath Bandaru - GitHub Portfolio</title>
   <meta name="description"
     content="Play Chain Reaction, an exciting online multiplayer game. Challenge your friends and enjoy the strategic gameplay. Available on Google Play.">
   <meta name="keywords"
