Refactor game item section in index.html for improved layout and user engagement

--- a/index.html
+++ b/index.html
@@ -270,16 +270,29 @@
     <h2>🎮 Here are the few apps that I built!</h2>
 
 
-    <div class="game-item" style="display: flex; align-items: flex-start;  margin-top: 20px; margin-bottom: 20px;">
-      <p class="bold-text" style="margin: 96px 40px 0 -123px;">3.</p>
-      <div class="game-content" style="border: 1px dotted; padding: 20px;     width: -webkit-fill-available;">
-        <p style="font-size: 21px;">Something big is coming... ✨</p>
-        <div style="text-align: center; padding: 40px 20px; color: #888;">
-          <p style="font-size: 18px; margin: 0;">🚀 Stay tuned!</p>
+    <div class="game-item" style="display: flex; align-items: flex-start;  margin-top: 20px;">
+      <p class="bold-text" style="margin: 96px 40px 0 -123px;">1.</p>
+      <div class="game-content" style="border: 1px dotted; padding: 20px;">
+        <p style="font-size: 21px;">Play chain reaction <a href="https://bharath-bandaru.github.io/chain-reaction-game/"
+            target="_blank" style="color: green; text-decoration: underline;">here</a>. ✨</p>
+        <div class="image-container">
+          <a href="https://portfolio-4a2e3.web.app/" target="_blank" rel="noopener noreferrer">
+            <img src="avatar.png" alt="Avatar" class="avatar">
+          </a>
+          <a href="https://play.google.com/store/apps/details?id=com.bhvp.chainreaction">
+            <img src="gplay.png" alt="Get it on Google Play" class="gplay">
+          </a>
+          <a href="https://bharath-bandaru.github.io/chain-reaction-game/" target="_blank" rel="noopener noreferrer">
+            <img style="width: 100%; height: auto;" src="banner.png" alt="Chain Reaction Game" class="game-screenshot">
+          </a>
         </div>
+        <div class="footer"></div>
+        <a href="https://play.google.com/store/apps/details?id=com.bhvp.chainreaction"
+          style="color: gray; text-decoration: underline;">
+          Get it on Google Play
+        </a>
       </div>
     </div>
-
 
     <div class="game-item" style="display: flex; align-items: flex-start;">
       <p class="bold-text" style="margin: 96px 40px 0 -123px;">2.</p>
@@ -313,30 +326,16 @@
         </a>
       </div>
     </div>
-
-    <div class="game-item" style="display: flex; align-items: flex-start;  margin-top: 20px;">
-      <p class="bold-text" style="margin: 96px 40px 0 -123px;">1.</p>
-      <div class="game-content" style="border: 1px dotted; padding: 20px;">
-        <p style="font-size: 21px;">Play chain reaction <a href="https://bharath-bandaru.github.io/chain-reaction-game/"
-            target="_blank" style="color: green; text-decoration: underline;">here</a>. ✨</p>
-        <div class="image-container">
-          <a href="https://portfolio-4a2e3.web.app/" target="_blank" rel="noopener noreferrer">
-            <img src="avatar.png" alt="Avatar" class="avatar">
-          </a>
-          <a href="https://play.google.com/store/apps/details?id=com.bhvp.chainreaction">
-            <img src="gplay.png" alt="Get it on Google Play" class="gplay">
-          </a>
-          <a href="https://bharath-bandaru.github.io/chain-reaction-game/" target="_blank" rel="noopener noreferrer">
-            <img style="width: 100%; height: auto;" src="banner.png" alt="Chain Reaction Game" class="game-screenshot">
-          </a>
+    <div class="game-item" style="display: flex; align-items: flex-start;  margin-top: 20px; margin-bottom: 20px;">
+      <p class="bold-text" style="margin: 96px 40px 0 -123px;">3.</p>
+      <div class="game-content" style="border: 1px dotted; padding: 20px;     width: -webkit-fill-available;">
+        <p style="font-size: 21px;">Something big is coming... ✨</p>
+        <div style="text-align: center; padding: 40px 20px; color: #888;">
+          <p style="font-size: 18px; margin: 0;">🚀 Stay tuned!</p>
         </div>
-        <div class="footer"></div>
-        <a href="https://play.google.com/store/apps/details?id=com.bhvp.chainreaction"
-          style="color: gray; text-decoration: underline;">
-          Get it on Google Play
-        </a>
       </div>
     </div>
+
   </div>
   </div>
 
@@ -904,7 +903,7 @@
 
     // Generate a centered pattern that fills 50% of the screen width
     (function setupDynamicSeparator() {
-      const BASE = "---------------xoxoxo-----xoxoxo-----xoxoxo-----xoxoxo-----xoxoxo---------------";
+      const BASE = "xoxoxo";
 
       function measureCharWidth(target) {
         const probe = document.createElement('span');
