Add dynamic background pattern to enhance visual appeal and user engagement

--- a/index.html
+++ b/index.html
@@ -17,6 +17,27 @@
       color: white;
       text-align: center;
       font-family: Arial, sans-serif;
+      position: relative;
+      overflow-x: hidden;
+    }
+
+    .background-pattern {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      transform: rotate(45deg) translate(-50%, -50%);
+      transform-origin: center;
+      z-index: -1;
+      color: #00800030;
+      letter-spacing: 50px;
+      line-height: 4;
+      font-family: monospace;
+      font-size: 14px;
+      white-space: pre;
+      pointer-events: none;
+      user-select: none;
     }
 
     .bold-text {
@@ -234,6 +255,7 @@
 </head>
 
 <body>
+  <div class="background-pattern" id="pattern"></div>
   <div class="container">
     <div class="container">
       <div style="display: flex; align-items: center; justify-content: center;">
@@ -889,6 +911,20 @@
     </main>
   </div>
   <script>
+    function renderXOXO(rows, columns) {
+      let pattern = "";
+
+      for (let r = 0; r < rows; r++) {
+        for (let c = 0; c < columns; c++) {
+          pattern += (c % 2 === 0) ? "x" : "o";
+        }
+        pattern += "\n"; // new line after each row
+      }
+
+      document.getElementById("pattern").textContent = pattern;
+    }
+
+    renderXOXO(50, 200);
     function togglePrivacyPolicy() {
       const privacyPolicySection = document.getElementById('privacy-policy-section');
       const toggleButton = document.querySelector('.toggle-button');
