Update app section headings and correct App Store link

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
       <span id="dynamic-separator" class="separator-text" aria-hidden="true"></span>
     </div>
 
-    <h2>🎮 Here are the few apps that I built!</h2>
+    <h2>🎮 Here are the few apps that I published!</h2>
 
 
     <div class="game-item" style="display: flex; align-items: flex-start;  margin-top: 20px; margin-bottom: 20px;">
@@ -342,7 +342,7 @@
           Get it on Google Play
         </a>
         <br>
-        <a href="https://apps.apple.com/us/app/escape-game/id6443941234"
+        <a href="https://apps.apple.com/us/app/escape-brain-teaser/id6743350755"
           style="color: gray; text-decoration: underline;">
           Download on the App Store
         </a>
